fixed nav alignment

--- a/client/static/css/player.css
+++ b/client/static/css/player.css
@@ -25,6 +25,10 @@ li {list-style: none;}
       color: black;
       text-decoration: none;
   }
+  a:hover {
+      color: black;
+      text-decoration: none;
+  }
 
   .range {
       width: 100%;
@@ -45,4 +49,17 @@ li {list-style: none;}
 }
 .recommendation:focus .go {
     opacity: 1;
+}
+
+.nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 5vw;
+    margin-right: 5vw;
+}
+
+.search-bar {
+    width: 75vw;
 }
